--- a/.env.template
+++ b/.env.template
@@ -2,6 +2,6 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=123456
 POSTGRES_DB=task_management
 DB_HOST=localhost
-DB_PORT=
-API=http://localhost:3000/api
+DB_PORT=5433
+DOCUMENT_API=http://localhost:3000/api
 JWT_SECRET=secrettoken
